# fe-awakening

./: Makefile  README.md  all.ipynb  characters.csv  class_stats.csv  graphing.ipynb  marriages.csv  neo.py  new_try.ipynb  pairings.ipynb  promotions.csv  pyproject.toml  scrape.py  setup.cfg  skills.csv  weapon_types.csv
data/: all_pairs.csv  children.csv  data.json  full_pairs.csv  kiddos.csv  marriages2.csv  pairs.csv  skills.csv  weapon_types.csv  weapons.csv
fe_awakening/: containers.py  db_utils.py
notebooks/: creating.ipynb
src/fe_awakening/: models.py  optimization.py  utils.py
tests/: test_containers.py
