[tool.poetry]
name = "fe-awakening"
version = "0.1.0"
description = "Fire Emblem Awakening Skill and Class Network for Character Optimization"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
pydantic = "^1.6.1"
click = "^7.1.2"
py2neo = "^2020.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
ipython = "^7.18.1"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
