[tool.poetry]
name = "fe-awakening"
version = "0.0.2"
description = "Fire Emblem Awakening Skill and Class Network for Character Optimization"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"
include = ["src/fe_awakening/weapons.csv", "src/fe_awakening/data*.csv"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
ipython = "^7.18.1"
isort = "^5.6.4"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
icecream = "^2.1.0"
rich = "^9.13.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
